# DHPCv4

./: .gitignore  CMakeLists.txt  README.md  clientenuevo.c  manda_discover.c  nuevo_server.c  prueba.c  save_client.c  test1.c
CMake/: FindModulesPF.cmake
HowToUse/: README.md
excersices/sockets/: client  server  simple_server.c  sizes.c  sizes_client.c  structs.c
excersices/varios/: Excersice1.c  getaddi.c  getaddirown.c  memset.c  poll.c  structs1.c
it/: VM-Config.txt  maquina.txt
lib/: CMakeLists.txt  dhcpv4_utils.c  package.c
lib/include/: dhcpv4_utils.h
resources/: DHCPUD.en.MD  DHCPUD.es.MD  Domain.en.MD  Domain.es.MD  GeneralTasks.es.MD  IT-Configuration.MD  spaguetti_mvp_client.c  spaguetti_mvp_server.c
src/: client  client.c  dhcp_packet.c  dhcp_packet.h  makefile  server  server.c
src/client/: CMakeLists.txt  client.c  client_network.c  client_utils.c  clientold.c
src/env/: .env
src/include/: dhcpv4_client.h  dhcpv4_server.h
src/server/: CMakeLists.txt  poll.c  server.c  server_network.c  server_utils.c
tests/: Broadcast-Client.c  CUnitTest.c  DHCPv4-server.c  UDP-server.c  client  server
