CMAKE_MINIMUM_REQUIRED(VERSION 3.30)
PROJECT(DHCPv4 LANGUAGES C)

#cmake --system-information | less
#cmake --help-command [command]

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

ADD_EXECUTABLE(dhcpv4_server)
TARGET_SOURCES(dhcpv4_server PRIVATE text.c)


CMAKE_HOST_SYSTEM_INFORMATION(RESULT OPSY QUERY OS_NAME)
IF(NOT ${OPSY} STREQUAL "Linux")
    MESSAGE(FATAL_ERROR "Unsupported OS")
ELSE()
    MESSAGE(STATUS "OS: ${OPSY}")
ENDIF()